src/assets/styles/dialog.module.css
.dialog-overlay {
  background-color: var(--overlay-color);
  backdrop-filter: blur(0.625rem);
  position: fixed;
  inset: 0;
  animation: overlay-show 0.25s cubic-bezier(0.16, 1, 0.3, 1) forwards;
  overflow: auto;
  z-index: 1;
}

.dialog-content {
  color: var(--text-color);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 768px;
  width: 100%;
  animation: content-show var(--transition-duration) cubic-bezier(0.16, 1, 0.3, 1);
  z-index: 2;
}

.dialog-content[data-state="closed"] {
  animation: content-hide var(--transition-duration) cubic-bezier(0.16, 1, 0.3, 1) 75ms;
}

.dialog-overlay[data-state="closed"] {
  animation: overlay-hide var(--transition-duration) cubic-bezier(0.16, 1, 0.3, 1) forwards 75ms;
}

.dialog-content:focus {
  outline: none;
}

.dialog-body {
  background-color: var(--card-background);
  border: 1px solid var(--border-color);
  padding: 1.5rem;
  margin: 0 1rem;
  border-radius: 0.75rem;
  box-shadow: 0 0.375rem 0.75rem rgba(0, 0, 0, 0.15);
  max-height: 85vh;
  overflow: auto;
}

.dialog-header {
  display: flex;
  justify-content: space-between;
  margin: 0.675rem 1rem 1.25rem;
  gap: 1.25rem;
  align-items: flex-end;
}

.dialog-header button,
.dialog-header a {
  color: rgb(160 160 160);
  transition: color 0.2s ease;

  &:hover {
    color: var(--text-color);
  }
}

.dialog-header-button {
  font-size: 1.125rem;
  border-radius: 1em;
  display: inline-grid;
  place-content: center;
  padding: 0.25rem;
}

.dialog-header-button:focus-visible {
  outline: 2px solid var(--primary-color-550);
  outline-offset: 1px;
  color: var(--text-color);
}

.dialog-title {
  font-weight: 800;
  color: var(--text-color);
  font-size: 2.25rem;
}

.dialog-description {
  color: var(--muted-text);
  font-size: 1.25rem;
  line-height: 1.5;
}

:root[data-theme="light"] .dialog-title {
  color: rgb(230, 230, 230);
}

:root[data-theme="light"] .dialog-description {
  color: rgb(160 160 160);
  transition: color 0.2s ease;

  &:hover {
    color: rgb(230, 230, 230);
  }
}

@keyframes overlay-show {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes overlay-hide {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

@keyframes content-show {
  from {
    opacity: 0;
    transform: translate(-50%, -48%) scale(0.96);
  }

  to {
    opacity: 1;
    transform: translate(-50%, -50%) scale(1);
  }
}

@keyframes content-hide {
  from {
    opacity: 1;
    transform: translate(-50%, -50%) scale(1);
  }

  to {
    opacity: 0;
    transform: translate(-50%, -48%) scale(0.96);
  }
}

